# LanLinkChat

./: .gitignore  CMakeLists.txt  LanLinkChat.pro  README.md  deploy_release.ps1  实验报告.md  流程图.md
release/: LanLinkChat
src/: main.cpp
src/model/: chattypes.h  peerinfo.h
src/network/: discoveryservice.cpp  discoveryservice.h  peerconnection.cpp  peerconnection.h  peermanager.cpp  peermanager.h  protocol.cpp  protocol.h  protocol.h.baiduyun.uploading.cfg  videodecodeworker.cpp  videodecodeworker.cpp.baiduyun.uploading.cfg  videodecodeworker.h  videodecodeworker.h.baiduyun.uploading.cfg
src/ui/: mainwindow.cpp  mainwindow.cpp.baiduyun.uploading.cfg  mainwindow.h  mainwindow.h.baiduyun.uploading.cfg  mainwindow.ui  mainwindow.ui.autosave  mainwindow.ui.baiduyun.uploading.cfg  opencvcamerathread.cpp  opencvcamerathread.h  videoencodeworker.cpp  videoencodeworker.h  videoframewidget.cpp  videoframewidget.h
